testsuite/bsc.mcd/Misc/ClockCheckCond.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling ClockCheckCond.bsv
code generation for sysClockCheckCond starts
Error: "ClockCheckCond.bsv", line 6, column 8: (G0007)
  Reference across clock domain in method `out'.
  Method calls by clock domain:
    Clock domain 1:
      default_clock:
	the_y.read at "ClockCheckCond.bsv", line 2, column 10,
    Clock domain 2:
      c:
	the_x.read at "ClockCheckCond.bsv", line 14, column 19,
  During elaboration of the interface method `out' at "ClockCheckCond.bsv",
  line 6, column 8.
  During elaboration of `sysClockCheckCond' at "ClockCheckCond.bsv", line 6,
  column 8.
